Fixed bug with flyout on last column going off screen

--- a/src/datagrid.scss
+++ b/src/datagrid.scss
@@ -32,6 +32,7 @@ $border-color: #ccc;
                 white-space: nowrap;padding:0;outline: 1px solid $border-color; top:0; position:absolute;z-index:6;border: 0;
                 &.pinned{z-index:7!important;background-color: #f1f1f1;}
                 &.reorderable .datagrid-header-cell-label{cursor:grab;cursor:-webkit-grab;}
+                &.column-last .dropdown-submenu-flyout{left: auto!important;right: 100%!important;}
                 & > div{padding-right: 8px;}
                 .resize-handle{display:block;position: absolute;background:#f6ac38;top: 0;bottom: 0;right: -2px;width: 5px; z-index: 8;cursor:ew-resize;}
                 
